source/stylesheets/post.scss
body main #content article {
  h2 { font-size: 1.4rem; font-weight: 600; margin-bottom: 0.4rem; }
  h3 { font-size: 1rem; font-weight: 700; margin-bottom: 0.3rem; }
  h4 { font-size: 1rem; font-weight: 500; margin-bottom: 0.3rem; }

  hr {
    border-top: 1px solid #ccc;
    margin-bottom: 20px;
  }

  aside {
    border: solid 1px gold;
    background: beige;
    padding: 1rem;
    margin: 0 2em;
  }

  pre, code {
    line-height: 1.125rem;
    font-size: 0.9em;
  }

  p, li {
    code {
      border-radius: 5px;
      background: #f1f1f1;
      color: var(--code-text-color);
      padding: 3px 4px;
    }
  }

  li > ul {
    margin-top: 1rem;
  }

  pre {
    code {
      border: none;
      display: block;
      padding: 1rem;
    }

    &.terminal {
      border: 1px solid #000;
      background-color: #333;
      color: #FFF;
      code { background-color: #333; }
    }
  }

  ol, ul, p, pre {
    margin-top: 0;
    margin-bottom: var(--paragraph-mb);
  }

  /* Using !important because twitter
    converts blockquote to iframe and
    applies inline CSS
  */
  iframe.twitter-tweet {
    margin-bottom: 20px !important;
  }

  blockquote {
    padding-left: 3rem;
    margin-bottom: 1rem;
    font-size: 1.25rem;
    p {
      line-height: var(--paragraph-mb);
      margin-bottom: 0.5rem;
      font-family: 'Indie Flower', cursive;
      &:last-child { margin-bottom: 0; }
      code {
        font-size: 0.9em;
      }
    }
  }
}

